--- a/src/style.scss
+++ b/src/style.scss
@@ -129,9 +129,9 @@ p {
 .fs-18 {
     font-size: 18px;
 }
-.fs-24 {
-    font-size: 24px;
-}
+// .fs-24 {
+//     font-size: 24px;
+// }
 .fs-38 {
     font-size: 38px;
 }
@@ -199,11 +199,26 @@ p {
 .pb-30 {
     padding-bottom: 30px;
 }
+.mt-30 {
+    margin-top: 30px;
+}
+.mb-30 {
+    margin-bottom: 30px;
+}
 .pt-50 {
     padding-top: 50px;
 }
 .pb-50 {
     padding-bottom: 50px;
+}
+.pt-60 {
+    padding-top: 60px;
+}
+.pb-60 {
+    padding-bottom: 60px;
+}
+.pb-90 {
+    padding-bottom: 90px;
 }
 .pt-120 {
     padding-top: 120px;
@@ -214,199 +229,3 @@ p {
 
 /* helper , base classes - End */
 
-
-/* Header navbar - Start */
-
-.header-wrap {
-    background: linear-gradient(104.29deg, rgba(140, 125, 255, 0.15) 0%, rgba(255, 137, 137, 0.15) 100%);
-    padding: 20px 0;
-    .header-menu {
-        display: flex;
-        gap: 50px;
-    
-        .nav-link {
-            padding: 0 !important;
-            color: var(--dark_2);
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 16px;
-            transition: all .1s linear;
-            position: relative;
-
-            &:hover {
-                color: var(--secondary);
-                
-
-                &.active {
-                    color: var(--secondary);
-    
-                }
-                &::before {
-                    width: 100%;
-                }
-            }
-
-            &.active {
-                color: var(--secondary);
-                position: relative;
-                &::before {
-                    position: absolute;
-                    content: "";
-                    width: 0%;
-                    height: 1px;
-                    background: linear-gradient(135deg, #FF8989 0%, #FFBB89 100%);
-                    border-radius: 2px;
-                    left: 0;
-                    bottom: -5px;
-                    transition: all .2s linear;
-                }
-                
-                &::before {
-                    width: 100%;
-                }
-            }
-            &::before {
-                position: absolute;
-                content: "";
-                width: 0%;
-                height: 1px;
-                background: linear-gradient(135deg, #FF8989 0%, #FFBB89 100%);
-                border-radius: 2px;
-                left: 0;
-                bottom: -5px;
-                transition: all .2s linear;
-            }
-
-            
-        }
-
-        
-    }
-}
-
-.dropdown-toggle {
-    .sub-menu-active {
-        position: relative;
-        
-        &::after {
-            transform: rotate(-180deg);
-        }
-    }
-
-    &::after {
-        background: url("data:image/svg+xml,%3Csvg width='14' height='7' viewBox='0 0 14 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.28 0.966797L7.93333 5.31346C7.42 5.8268 6.58 5.8268 6.06667 5.31346L1.72 0.966797' stroke='%233B3663' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-        width: 16px;
-        height: 16px;
-        background-repeat: no-repeat;
-        background-position: center center;
-        border: 0;
-        vertical-align: -5px;
-        transition: all .2s linear;
-
-        
-    }
-    &:hover {
-        &::after {
-            transform: rotate(-180deg);
-        }
-    }
-}
-
-//Common button CSS
-
-.contact-fill-btn {
-    background: linear-gradient(94.99deg, #8C7DFF 0%, #7DA9FF 100%);
-    padding: 10px 18px;
-    gap: 5px;
-
-    &:hover {
-        background: linear-gradient(270deg, #8C7DFF 0%, #7DA9FF 100%);
-    }
-}
-
-/* Header navbar - End */
-
-/* Hero banner - Start */
-.hero-banner{
-    height: calc(100vh - 80px);
-    background: linear-gradient(104.29deg, rgba(140, 125, 255, 0.15) 0%, rgba(255, 137, 137, 0.15) 100%);
-}
-
-.subheading {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.09em;
-    text-transform: uppercase;
-    color: var(--main);
-}
-
-.banner-heading {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 72px;
-    color: var(--dark_2);
-}
-
-.dual-btutton-wrap {
-    gap: 20px;
-}
-/* Hero banner - End */
-
-
-/* Common button - Start */
-
-//Fill color button.
-.common-fill-btn {
-    padding: 17px 68px 17px 40px;
-    background: linear-gradient(94.99deg, #8C7DFF 0%, #7DA9FF 100%);
-    position: relative;
-
-    &::before {
-        position: absolute;
-        content: "";
-        background: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.8225 4.44727L15.375 8.99977L10.8225 13.5523' stroke='white' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M2.625 9H15.2475' stroke='white' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-        width: 18px;
-        height: 18px;
-        right: 40px;
-        background-repeat: no-repeat;
-        transition: all .2s linear
-    };
-
-    &:hover {
-        &::before {
-            right: 33px;
-        }
-    }
-
-}
-
-//border button.
-
-.common-minimal-btn {
-    
-    padding: 15px 66px 15px 38px;
-    background: transparent;
-    border: 2px solid #8C7DFF;
-    position: relative;
-
-    &::before {
-        position: absolute;
-        content: "";
-        background: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.8225 4.44727L15.375 8.99977L10.8225 13.5523' stroke='%238C7DFF' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M2.625 9H15.2475' stroke='%238C7DFF' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-        width: 18px;
-        height: 18px;
-        right: 40px;
-        background-repeat: no-repeat;
-        transition: all .2s linear
-    };
-
-    &:hover {
-        color: var(--main);
-        &::before {
-            right: 33px;
-        }
-    }
-}
-
-/* Common fill button - End */
