--- a/src/style.scss
+++ b/src/style.scss
@@ -54,6 +54,15 @@ h6 {
 p {
     margin: 0;
 }
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+li {
+    margin: 0;
+    padding: 0;
+}
 /* reset, root - END */
 
 
@@ -216,6 +225,12 @@ p {
 }
 .pb-60 {
     padding-bottom: 60px;
+}
+.pt-80 {
+    padding-top: 80px;
+}
+.pb-80 {
+    padding-bottom: 80px;
 }
 .pb-90 {
     padding-bottom: 90px;
