--- a/src/Components/Feature/Feature.scss
+++ b/src/Components/Feature/Feature.scss
@@ -3,9 +3,7 @@
     
 }
 
-// .leftShape-img {
-    
-// }
-// .rightShape-img {}
-
-
+.featured-list-item {
+    gap: 12px;
+    margin-bottom: 18px;
+}
