--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -1,6 +1,11 @@
 .footer-wrap {
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: -122px;
+    
+    .footer-top {
+        padding-top: 206px;
+    }
 
     .widget-title {
         padding-bottom: 38px;
@@ -46,3 +51,38 @@
         }
     }
 }
+
+
+//Newsletter
+.newsletter-wrap {
+    background: linear-gradient(94.99deg, #8C7DFF 0%, #7DA9FF 100%);
+    padding: 60px 95px;
+
+    .newsletter-form-wrap {
+        
+        .newsletter-email {
+            padding: 29px 30px 29px 64px;
+            border: 0;
+            background-image: url('data:image/svg+xml,<svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.2677 7.06152L12.0023 10.4958C11.1951 11.1287 10.0635 11.1287 9.25628 10.4958L4.95422 7.06152" stroke="url(%23paint0_linear_302_1715)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><path fill-rule="evenodd" clip-rule="evenodd" d="M5.88787 1.5H15.3158C16.6752 1.51525 17.969 2.08993 18.896 3.0902C19.823 4.09048 20.3022 5.42903 20.222 6.79412V13.322C20.3022 14.6871 19.823 16.0256 18.896 17.0259C17.969 18.0262 16.6752 18.6009 15.3158 18.6161H5.88787C2.96796 18.6161 1 16.2407 1 13.322V6.79412C1 3.87545 2.96796 1.5 5.88787 1.5Z" stroke="url(%23paint1_linear_302_1715)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/><defs><linearGradient id="paint0_linear_302_1715" x1="4.95422" y1="7.06152" x2="7.3673" y2="14.0456" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF8989"/><stop offset="1" stop-color="%23FFBB89"/></linearGradient><linearGradient id="paint1_linear_302_1715" x1="1" y1="1.5" x2="18.0006" y2="20.6009" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF8989"/><stop offset="1" stop-color="%23FFBB89"/></linearGradient></defs></svg>');
+            background-repeat: no-repeat;
+            background-position: 30px 30px;
+
+
+            &::placeholder {
+                color: var(--dark_4);
+            }
+            &:focus {
+                outline: none;
+                border: none;
+                box-shadow: none;
+            }
+            
+            
+        }
+        .newsletter-btn {
+            top: 15px;
+            right: 15px;
+        }
+    }
+}
+
