--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -2,7 +2,7 @@
 
 .header-wrap {
     background: linear-gradient(104.29deg, rgba(140, 125, 255, 0.15) 0%, rgba(255, 137, 137, 0.15) 100%);
-    padding: 20px 0;
+    padding: 27px 0 !important;
     .header-menu {
         display: flex;
         gap: 50px;
