Add Testimonial section in home page

--- a/src/style.scss
+++ b/src/style.scss
@@ -199,6 +199,9 @@ li {
 }
 
 //Padding
+.pt-15 {
+    padding-top: 15px;
+}
 .pt-20 {
     padding-top: 20px;
 }
@@ -222,6 +225,12 @@ li {
 }
 .pb-50 {
     padding-bottom: 50px;
+}
+.pt-40 {
+    padding-top: 40px;
+}
+.pb-40 {
+    padding-bottom: 40px;
 }
 .pt-60 {
     padding-top: 60px;
