--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,7 +1,9 @@
 /* Header navbar - Start */
 
 .header-wrap {
-    background: linear-gradient(104.29deg, rgba(140, 125, 255, 0.15) 0%, rgba(255, 137, 137, 0.15) 100%);
+    // background: linear-gradient(104.29deg, rgba(140, 125, 255, 0.15) 0%, rgba(255, 137, 137, 0.15) 100%);
+    background: transparent;
+    margin-bottom: -90px;
     padding: 27px 0 !important;
     .header-menu {
         display: flex;
