--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,7 +4,7 @@
     height: 100%;
     background: linear-gradient(104.29deg, rgba(140, 125, 255, 0.15) 0%, rgba(255, 137, 137, 0.15) 100%);
     .hero-banner-inner {
-        padding: 100px 0;
+        padding: 160px 0 100px 0 ;
     }
 }
 
