404 Error page complete

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -5,6 +5,7 @@
     background: transparent;
     margin-bottom: -90px;
     padding: 27px 0 !important;
+    z-index: 99;
     .header-menu {
         display: flex;
         gap: 50px;
