--- a/src/Components/SubPageHeader/SubPageHeader.scss
+++ b/src/Components/SubPageHeader/SubPageHeader.scss
@@ -1,4 +1,11 @@
 .page-heder-wrap {
     padding: 210px 0 172px 0;
     background: linear-gradient(104.29deg, rgba(140, 125, 255, 0.15) 0%, rgba(255, 137, 137, 0.15) 100%);
+    .content-container {
+        z-index: 99;
+    }
+    .sub-page-shape-1,
+    .sub-page-shape-2 {
+        z-index: -2;
+    }
 }
