--- a/src/Components/SubPageHeader/SubPageHeader.scss
+++ b/src/Components/SubPageHeader/SubPageHeader.scss
@@ -9,3 +9,15 @@
         z-index: -2;
     }
 }
+
+.breadcrumb-wrap {
+    ul {
+        gap: 15px;
+        .breadcrumb-disabled {
+            transition: all 150ms linear;
+            &:hover {
+                color: var(--secondary);
+            }
+        }
+    }
+}
